--- a/index.html
+++ b/index.html
@@ -8,9 +8,101 @@
     <title>Document</title>
 </head>
 <body>
-    <header>Header</header>
-    <aside>Aside</aside>
-    <main>Main</main>
+    <header>
+        <ul>
+            <li>Section 1</li>
+            <li>Section 2</li>
+            <li>Section 3</li>
+        </ul>
+    </header>
+    <aside>
+        <section>
+            <h1>Civilian drone flying</h1>
+            <p>Civilian drone flying has grown significantly, transforming industries and hobbies. Drones are used for various purposes, including aerial photography, surveying, wildlife monitoring, and delivery. Advances in technology have made them more affordable and accessible, appealing to both hobbyists and professionals. However, their increasing use raises concerns about safety, privacy, and regulation, prompting many countries to implement guidelines to ensure responsible operation while encouraging innovation.</p>
+        </section>
+        <section>
+            <h2>Things that can be captured</h2>
+            <ol>
+                <li>Aerial Footage</li>
+                <li>Real Estate</li>
+                <li>Wildlife Monitoring</li>
+                <li>Sports and Events</li>
+                <li>Drone Light Shows</li>
+            </ol>
+        </section>
+        <section>
+            <h2>Improving Your Skills</h2>
+            <p>To improve your drone flying skills, practice regularly in open areas to build control, experiment with advanced techniques, and seek feedback through tutorials or drone clubs. Stay updated on software, understand your drone’s features, and focus on learning from each flight to enhance both safety and performance.</p>
+        </section>
+    </aside>
+    <!-- Main Section -->
+    <main>
+        <h2>Drones</h2>
+        <section class="drone container">
+            <div class="image-container">
+                <img src="./resources/images/drones_1.jpg" alt="small drone" width="300px">
+                <h4>Drone name/type</h4>
+            </div>
+            <div class="image-container">
+                <img src="./resources/images/drones_2.jpg" alt="small drone" width="300px">
+                <h4>Drone name/type</h4>
+            </div>
+            <div class="image-container">
+                <img src="./resources/images/drones_3.jpg" alt="small drone" width="300px">
+                <h4>Drone name/type</h4>
+            </div>
+            <div class="image-container">
+                <img src="./resources/images/drones_4.jpg" alt="small drone" width="300px">
+                <h4>Drone name/type</h4>
+            </div>
+            <div class="image-container">
+                <img src="./resources/images/drones_5.jpg" alt="small drone" width="300px">
+                <h4>Drone name/type</h4>
+            </div>
+            <div class="image-container">
+                <img src="./resources/images/drones_6.jpg" alt="small drone" width="300px">
+                <h4>Drone name/type</h4>
+            </div>
+            <div class="image-container">
+                <img src="./resources/images/drones_7.jpg" alt="small drone" width="300px">
+                <h4>Drone name/type</h4>
+            </div>
+            <div class="image-container">
+                <img src="./resources/images/drones_8.jpg" alt="small drone" width="300px">
+                <h4>Drone name/type</h4>
+            </div>
+            
+        </section>
+        <!-- Footage section -->
+        <h2>Footage</h2>
+        <section class="footage container">
+            <div class="image-container">
+                <img src="./resources/images/footage_1.jpg" alt="small drone" width="300px">
+                <h4>Drone name/type</h4>
+            </div>
+            <div class="image-container">
+                <img src="./resources/images/footage_2.jpg" alt="small drone" width="300px">
+                <h4>Drone name/type</h4>
+            </div>
+            <div class="image-container">
+                <img src="./resources/images/footage_3.jpg" alt="small drone" width="300px">
+                <h4>Drone name/type</h4>
+            </div>
+            <div class="image-container">
+                <img src="./resources/images/footage_4.jpg" alt="small drone" width="300px">
+                <h4>Drone name/type</h4>
+            </div>
+            <div class="image-container">
+                <img src="./resources/images/footage_5.jpg" alt="small drone" width="300px">
+                <h4>Drone name/type</h4>
+            </div>
+            <div class="image-container">
+                <img src="./resources/images/footage_6.jpg" alt="small drone" width="300px">
+                <h4>Drone name/type</h4>
+            </div>            
+        </section>
+
+    </main>
     <footer>Footer</footer>
 </body>
 </html>
