--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Document</title>
 </head>
 <body>
-    <header>
+    <header id="top">
         <ul>
             <li><a href="#events">Events</a></li>
             <li><a href="#library">Library</a></li>
@@ -93,7 +93,7 @@
             
         </section>
         <!-- Footage section -->
-        <h2 id="library">Footage</h2>
+        <h1 id="library">Footage</h1>
         <section class="footage container">
             <div class="image-container">
                 <img src="./resources/images/footage_1.jpg" alt="small drone" width="300px">
@@ -120,7 +120,11 @@
                 <h4>Drone name/type</h4>
             </div>            
         </section>
-
+        <a id="top" href="#top">
+            <nav>
+                <p>To: Top</p>
+            </nav>
+        </a>
     </main>
     <footer id="footer">
         <span>&copyLearning WebDev, 2024</span>
