Changed image layout in main-section of grid

--- a/index.html
+++ b/index.html
@@ -75,20 +75,20 @@
                 <h4>DJI Mavic Mini</h4>
             </div>
             <div class="image-container">
+                <img src="./resources/images/drones_7.jpg" alt="small drone" width="300px">
+                <h4>Drone for Work</h4>
+            </div>
+            <div class="image-container">
                 <img src="./resources/images/drones_5.jpg" alt="small drone" width="300px">
-                <h4>Drone name/type</h4>
+                <h4>Drone for pleasure</h4>
             </div>
             <div class="image-container">
                 <img src="./resources/images/drones_6.jpg" alt="small drone" width="300px">
-                <h4>Drone name/type</h4>
-            </div>
-            <div class="image-container">
-                <img src="./resources/images/drones_7.jpg" alt="small drone" width="300px">
-                <h4>Drone name/type</h4>
+                <h4>Drone for leisure</h4>
             </div>
             <div class="image-container">
                 <img src="./resources/images/drones_8.jpg" alt="small drone" width="300px">
-                <h4>Drone name/type</h4>
+                <h4>Personal Drone</h4>
             </div>
             
         </section>
@@ -97,27 +97,27 @@
         <section class="footage container">
             <div class="image-container">
                 <img src="./resources/images/footage_1.jpg" alt="small drone" width="300px">
-                <h4>Drone name/type</h4>
+                <h4>Forest</h4>
             </div>
             <div class="image-container">
                 <img src="./resources/images/footage_2.jpg" alt="small drone" width="300px">
-                <h4>Drone name/type</h4>
-            </div>
-            <div class="image-container">
-                <img src="./resources/images/footage_3.jpg" alt="small drone" width="300px">
-                <h4>Drone name/type</h4>
-            </div>
-            <div class="image-container">
-                <img src="./resources/images/footage_4.jpg" alt="small drone" width="300px">
-                <h4>Drone name/type</h4>
+                <h4>Autumn Forest</h4>
             </div>
             <div class="image-container">
                 <img src="./resources/images/footage_5.jpg" alt="small drone" width="300px">
-                <h4>Drone name/type</h4>
+                <h4>Ocean and Vegetation</h4>
+            </div>
+            <div class="image-container">
+                <img src="./resources/images/footage_4.jpg" alt="small drone" width="300px">
+                <h4>Road Tripping</h4>
+            </div>
+            <div class="image-container">
+                <img src="./resources/images/footage_3.jpg" alt="small drone" width="300px">
+                <h4>Rocky Outcrop in Ocean</h4>
             </div>
             <div class="image-container">
                 <img src="./resources/images/footage_6.jpg" alt="small drone" width="300px">
-                <h4>Drone name/type</h4>
+                <h4>Snowy Road</h4>
             </div>            
         </section>
         <a id="top" href="#top">
