Changed colour for various layouts and screen sizes

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                 <h4>Snowy Road</h4>
             </div>            
         </section>
-        <a id="top" href="#top">
+        <a id="top" class="top" href="#top">
             <nav>
                 <p>To: Top</p>
             </nav>
